changes in properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=01-kafka-demo-poc
 
 
-spring.kafka.bootstrap-servers=15.206.68.213:9092
+spring.kafka.bootstrap-servers=<YOUR_EC2_PUBLIC_IP>:9092
+
 
 # Producer config
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
